k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - evolution.api.by2.com.br
      secretName: evolution-api-tls
  rules:
    - host: evolution.api.by2.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evolution-api
                port:
                  number: 80
